--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Resume: Julio Garcia </title>
+  <title>Resume: Avery Marcelino </title>
   <link href="style.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width">
 </head>
@@ -12,11 +12,11 @@
 	<img src = "https://scontent.fmnl8-1.fna.fbcdn.net/v/t1.0-9/28661300_10211813688239450_7877505764998443231_n.jpg?oh=aac1e9bd720aa46afdd064eefee160e0&oe=5B0EF97F" width = "100" height = "100">
 	</div>
   <section class=”about-me”>
-       <h1> JULIO MIGUEL L. GARCIA </h1>
+       <h1> AVERY C. MARCELINO </h1>
        <ul>
-       <li> 122 Lucero Street, Mabolo, Malolos, Bulacan </li>
-       <li> 0932-875-6685 ; (044)816-8816 </li>
-       <li> juliomiguellgarcia@gmail.com </li>
+       <li> 137 Kapatan Street, Matimbo, Malolos, Bulacan </li>
+       <li> 0956-586-5710 ; (044)760-6964 </li>
+       <li> marc.avery021401@gmail.com </li>
        </ul>
   </section>
   <section class=”my-skills”>
