--- a/index.html
+++ b/index.html
@@ -22,32 +22,27 @@
   <section class=”my-skills”>
        <h2>SKILLS</h2>
        <ol>
-       	<li> Critical thinker equipped with problem solving skills </li>
        	<li> Fluent in written and oral communication (English and Filipino) </li>
-	<li> Academically competent in reading and math </li>
-	<li> Computer/technical literate (MS Office and Google Applications) </li>
-  	<li> Well-organized and able to manage multiple assignments and tasks </li>
-	<li> Effective within and outside group collaborations </li>
-	<li> Diligent, goal-oriented, persistent </li>
+       	<li> Effective within and outside group collaborations </li>
+	<li> Empowered with the emerging technologies </li>
+	<li> Literate in media and information </li>
+  	<li> Academically competent in reading, Science, and Math </li>
+	<li> Employs creativity in solving problems </li>
+	<li> Able to manage tasks properly in accordance to the time given </li>
        </ol>
   </section>
   <section class=”my-education”>
        <h2>EDUCATION</h2>
-       <p> Junior High School (with honors) <br>                           			
-       <b> Holy Infant School </b> <br>
+       <p> Junior High School (with Honors) <br>                           			
+       <b> Holy Spirit Academy of Malolos </b> <br>
            Bagong Bayan, City of Malolos, Bulacan <br>
            June 2013 – March 2017 </p>
   </section>
 	<h3>GRAPHICS</h3>
  	<ul>
    	<li>Proficient with Photoshop</li>
-    	<li>An expert Blender user</li>
 	</ul>
-	<h3>VIDEO EDITING</h3>
-	<ul>
-   	<li>Proficient with iMovie</li>
-    	<li>Proficient with Adobe Premiere</li>
-	</ul> 
+
 </body>
 
 </html>
