--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <div>
-	<img src = "https://scontent.fmnl8-1.fna.fbcdn.net/v/t1.0-9/28661300_10211813688239450_7877505764998443231_n.jpg?oh=aac1e9bd720aa46afdd064eefee160e0&oe=5B0EF97F" width = "100" height = "100">
+	<img src = "https://scontent.fmnl4-4.fna.fbcdn.net/v/t1.0-9/21766358_1837399809622703_4524853341405537194_n.jpg?_nc_eui2=v1%3AAeG09QwhDGEDvzV-xjVRKHGPMe5gZJKDJKxHCNmxetsSUtglz1Ne5lPEndUyNSWpyWWfxYeAY_sNcyTPTab4Ty2r5lZBHCIAnfwHqNYsjtqF5g&oh=2590cd129c0bc4c0ab0c7bd68ec29cb0&oe=5B02B221" width = "100" height = "100">
 	</div>
   <section class=”about-me”>
        <h1> AVERY C. MARCELINO </h1>
